# koala

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
app/: CMakeLists.txt
app/include/: app_layer.h
app/src/: app_layer.cpp  app_main.cpp  winmain_shim.cpp
core/: CMakeLists.txt
core/include/: application.h  events.h  layer.h  layer_stack.h
core/include/glad/: glad.h
core/src/: application.cpp  glad.c  window.cpp
network/: CMakeLists.txt
network/include/: http_client.h  http_request.h  http_response.h  utils.h
network/src/: windows_client.cpp
platform/: CMakeLists.txt
platform/src/windows/: http_client.cpp
storage/: CMakeLists.txt
storage/include/: storage.h
storage/src/: storage.cpp
